<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">SqLiteTodoManager</string>
    <string name="button_add">New task</string>
    <string name="button_clear">Clear completed</string>
    <string name="edittext_hint_new_task">Type here your new task...</string>
    <string name="button_save">Save task</string>
    <string name="button_cancel">Cancel</string>
</resources>
