<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<ListView
		android:layout_width="fill_parent"
		android:id="@+id/lvTodos"
		android:layout_weight="1"
		android:layout_height="wrap_content"></ListView>
	<EditText
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/etNewTask"
		android:hint="@string/edittext_hint_new_task"
		android:visibility="gone">
		<requestFocus></requestFocus>
	</EditText>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/llNewTaskButtons"
		android:visibility="gone">
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/btnSave"
			android:text="@string/button_save"></Button>
		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/btnCancel"
			android:text="@string/button_cancel"></Button>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:id="@+id/llControlButtons">
		<Button
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/btnAddNew"
			android:text="@string/button_add"
			android:layout_width="fill_parent"></Button>
		<Button
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/btnClearCompleted"
			android:text="@string/button_clear"
			android:layout_width="fill_parent"></Button>
	</LinearLayout>
</LinearLayout>